--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <description>Fitness Tracker</description>
     <properties>
         <java.version>11</java.version>
+
+        <!-- GUI Properties -->
+        <primefaces.version>10.0.0</primefaces.version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -39,6 +43,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>${primefaces.version}</version>
         </dependency>
 
     </dependencies>
